Se modifico E3 en progreso

--- a/index.html
+++ b/index.html
@@ -15,32 +15,126 @@
     <link rel="stylesheet" href="./style.css" />
     <title>Navbar</title>
   </head>
-  <header class="header">
-    <nav>
-      <img
-        class="logo"
-        src="./img/e8c2217c6d2947edbb17baf1145e4a68.png_logopers.png"
-        alt="icono"
-      />
-      <p class="desc_ubi">
-        <img class="ubi" src="./img/ubicacion.png" alt="" />Cordoba Argentina
-      </p>
-      <p class="number">
-        <img class="wt" src="./img/wt.png" alt="wt" />3517654446
-      </p>
-      <ul>
-        <li class="nav__work_us"><a href="#">Trabaja con Nosotros</a></li>
-      </ul>
-      <ul class="nav">
-        <li class="nav__link"><a href="#">Productos</a></li>
-        <li class="nav__link"><a href="#">Recomendados</a></li>
-        <li class="nav__link"><a href="#">Hot Sale</a></li>
-      </ul>
-    </nav>
-  </header>
-  <main>
-    <h1>kskskdodkeoko</h1>
-  </main>
 
-  <body></body>
+  <body>
+    <header class="header">
+      <nav>
+        <img
+          class="logo"
+          src="./img/e8c2217c6d2947edbb17baf1145e4a68.png_logopers.png"
+          alt="icono"
+        />
+        <p class="desc_ubi">
+          <img class="ubi" src="./img/ubicacion.png" alt="" />Cordoba Argentina
+        </p>
+        <p class="number">
+          <img class="wt" src="./img/wt.png" alt="wt" />3517654446
+        </p>
+        <ul>
+          <li class="nav__work_us"><a href="#">Nosotros</a></li>
+        </ul>
+        <ul class="nav">
+          <li class="nav__link"><a href="#">Productos</a></li>
+          <li class="nav__link"><a href="#">Recomendados</a></li>
+          <li class="nav__link"><a href="#">Hot Sale</a></li>
+        </ul>
+      </nav>
+    </header>
+    <main>
+      <h1>Novedades, lo mas reciente, promociones y ofertas</h1>
+      <div class="container">
+        <div class="card">
+          <img
+            src="./img/productos31_10158.png"
+            alt="heladera"
+            class="card__img"
+          />
+          <div class="card__info">
+            <div class="card__user">
+              <div class="user__img"></div>
+              <div class="user__text">
+                <h2 class="user__title">Heladera</h2>
+              </div>
+            </div>
+            <div class="card__btns">
+              <button class="btn btn--primary">Precio</button>
+              <button class="btn btn--secundary">Comprar</button>
+            </div>
+          </div>
+        </div>
+
+        <div class="card">
+          <img
+            src="./img/amazfit-gtr-4-1711350126627-3291814.webp"
+            alt="Reloj"
+            class="card__img"
+          />
+          <div class="card__info">
+            <div class="card__user">
+              <div class="user__img"></div>
+              <div class="user__text">
+                <h2 class="user__title">Reloj Int.</h2>
+              </div>
+            </div>
+            <div class="card__btns">
+              <button class="btn btn--primary">Precio</button>
+              <button class="btn btn--secundary">Comprar</button>
+            </div>
+          </div>
+        </div>
+
+        <div class="card">
+          <img
+            src="./img/productos31_10194.png"
+            alt="Cocina"
+            class="card__img"
+          />
+          <div class="card__info">
+            <div class="card__user">
+              <div class="user__img"></div>
+              <div class="user__text">
+                <h2 class="user__title">Cocina</h2>
+              </div>
+            </div>
+            <div class="card__btns">
+              <button class="btn btn--primary">Precio</button>
+              <button class="btn btn--secundary">Comprar</button>
+            </div>
+          </div>
+        </div>
+
+        <div class="card">
+          <img
+            src="./img/productos31_105369.jpg"
+            alt="auriculares"
+            class="card__img"
+          />
+          <div class="card__info">
+            <div class="card__user">
+              <div class="user__img"></div>
+              <div class="user__text">
+                <h2 class="user__title">Auriculares</h2>
+              </div>
+            </div>
+            <div class="card__btns">
+              <button class="btn btn--primary">Precio</button>
+              <button class="btn btn--secundary">Comprar</button>
+            </div>
+          </div>
+        </div>
+      </div>
+    </main>
+    <label>
+      <h2>Nosotros</h2>
+      <p>
+        Somos una empresa que desde tu casa compras y te acercamos los mejores
+        productos, tenes distintas formas de pago,nos caracterizamos de que en
+        el caso que no estes conforme con tu producto tenes garantia de
+        devolucion, tenemos entrega sin costo a todo el pais y con un amplio
+        equipo de trabajo. Estamos en Cordoba capital y tu consulta o critica
+        nos ayuda a seguir creciendo. En nuestra bio podes ver todos los
+        comentarios.
+      </p>
+    </label>
+  </body>
 </html>
